[metadata]
name = waitress

[options]
test_suite = tests
include_package_data = True
install_requires =
  django
  coveralls
  coverage
  dj-database-url
  django-bower
  django-cors-headers
  django-coverage
  django-nose
  python-dotenv
  django-postgrespool
  django-rest-swagger
  djangorestframework
  gunicorn
  nose
  psycopg2-binary
  python-dateutil
  slacker
  whitenoise
package_dir =
    =waitress
packages = find:
[options.packages.find]
where = waitress
